--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
         
         <main class="main-content">
-            <img class="img-main" src="/images/profile.jpg" alt="Gentlemen in suit">
+            <img class="img-main" src="img\profile.jpg" alt="Gentlemen in suit">
             <h2>Scrimbafy.me</h2>
             <span class="subheading">Liven up your profile pic</span>
             
